# anylinuxfs

./: .gitignore  .instructions.md  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  bridging-header.h  build-all.sh  build-app.sh  build-rootfs.sh  copilot-instructions.md  download-dependencies.sh  install.sh  run-rust-tests.sh
.gitea/workflows/: linux-aarch64.yaml
.github/: FUNDING.yml
.github/instructions/: copilot-instructions.md
.github/workflows/: linux-aarch64.yml
.kernel-builder/: builder-run.sh  builder-setup.sh  freebsd-run.sh
.kernel-builder/src/: debian-vm-config.lua  freebsd-bootstrap-vm-config.lua  freebsd-vm-config.lua
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-protocol-types/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-vmproxy-event-emission/: 02-01-PLAN.md  02-01-SUMMARY.md  02-REVIEW.md
.planning/phases/03-host-ipc-consumer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-REVIEW.md  03-SECURITY.md  03-UAT.md
.planning/phases/04-integration-verification/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md
anylinuxfs/: Cargo.toml  build.rs  cc_linux  pkg-config-stable-prefix
anylinuxfs/.cargo/: config.toml
anylinuxfs/src/: api.rs  bindings.rs  cli.rs  cmd_mount.rs  devinfo.rs  diskutil.rs  dnsutil.rs  fsutil.rs  log.rs  main.rs  mdns.rs  netutil.rs  privilege.rs  procutils.rs  pubsub.rs  rpcbind.rs  settings.rs  utils.rs  vm.rs  vm_image.rs  vm_network.rs  xattr_util.rs
anylinuxfs/src/diskutil/: darwin.rs  linux.rs  mod.rs
anylinuxfs/src/rpcbind/: darwin.rs  linux.rs  mod.rs
anylinuxfs/src/vm_network/: darwin.rs  mod.rs
cf-events-test/: Cargo.toml
cf-events-test/src/: main.rs
common-utils/: Cargo.toml
common-utils/src/: ipc.rs  lib.rs  log.rs  vmctrl.rs
docs/: building.md  custom-actions.md  examples.md  important-notes.md  luks-lvm.md  lvm-luks.md  notes.md  troubleshooting.md
etc/: anylinuxfs-linux.toml  anylinuxfs.toml
etc/anylinuxfs/: config.toml
fetch-rootfs/: go.mod  main.go
fetch-rootfs/vmrunner/: vmrunner.c  vmrunner.cpp  vmrunner.go  vmrunner.h
freebsd-bootstrap/: Makefile  go.mod  go.sum  main.go  txz2iso.sh
freebsd-bootstrap/chroot/: chroot.go
freebsd-bootstrap/mount/: mount.go
freebsd-bootstrap/oci/: unpack.go
freebsd-bootstrap/remoteiso/: remoteiso.go
init-rootfs/: default-alpine-packages.txt  go.mod  go.sum  main.go  override_stat_darwin.go  override_stat_other.go
init-rootfs/vmrunner/: vmrunner.c  vmrunner.go
ipio/: Cargo.toml  build.rs  build.sh
ipio/src/: client.rs  launcher.rs  lib.rs  server.rs
kernel-builder/: .gitignore  bootstrap-freebsd.sh  builder-run.sh  builder-setup.sh  freebsd-run.sh  install-dependencies.sh
kernel-builder/src/: bootstrap-vm-config.lua  bootstrap-vm-script.sh  debian-vm-config.lua  freebsd-bootstrap-vm-config.lua  freebsd-microvm-config.lua  freebsd-vm-config.lua  vm-run.lua
rpcbind-comm-test/register-services/: Makefile  main.c  oncrpc.h
sandbox-test/: sandbox-test.entitlements
sandbox-test/sandbox-test/: main.swift
sandbox-test/sandbox-test.xcodeproj/: project.pbxproj
scripts/: create-bitlocker-image.sh
tests/: .gitignore  01-ext4.bats  02-btrfs.bats  03-exfat.bats  04-f2fs.bats  05-ntfs.bats  06-zfs.bats  07-ufs.bats  10-partitioned-disk.bats  11-lvm.bats  12-luks.bats  13-attach-image.bats  13-hdiutil-attach.bats  14-multi-disk-btrfs.bats  15-multi-instance.bats  16-freebsd-zfs-multi.bats  17-keyfile.bats  18-image-partition.bats  20-subcommands.bats  21-mount-options.bats  22-raid.bats  23-qcow2-image-partition.bats  run-tests.sh
tests/test_helper/: common.bash
vmproxy/: Cargo.toml  bsd-build.sh
vmproxy/.cargo/: config.toml
vmproxy/src/: kernel_cfg.rs  main.rs  utils.rs  zfs.rs
vmrunner-sys/: Cargo.toml
vmrunner-sys/.cargo/: config.toml
vmrunner-sys/src/: lib.rs
