[package]
name = "anylinuxfs"
description = "Mount any linux-supported filesystem read/write using nfs and a microVM"
version = "0.1.8"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
libc = "0.2.171"
objc2-core-foundation = "0.3.1"
objc2-disk-arbitration = "0.3.1"
url = "2.5.4"
nanoid = "0.4.0"
libblkid-rs = "0.4.0"
clap = { version = "4.5.35", features = ["cargo", "derive"] }
homedir = "0.3.4"
common_utils = { path = "../common-utils" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nix = { version = "0.29.0", features = ["signal"] }
toml = "0.8.20"
notify = "8.0.0"
signal-hook = { version = "0.3.17", features = ["iterator"] }

[patch.crates-io]
libblkid-rs = { git = 'https://github.com/stratis-storage/libblkid-rs.git', rev = "5c08342" }
