[package]
name = "common_utils"
version = "0.11.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bstr = { version = "1.12.0", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
libc = "0.2.177"
percent-encoding = "2.3.1"
ron = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
wait-timeout = "0.2.1"

[features]
default = ["freebsd"]
freebsd = []
