[package]
name = "vmproxy"
version = "0.10.2"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
libc = "0.2.177"

reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
common_utils = { path = "../common-utils" }
clap = { version = "4.5.35", features = ["derive"] }
rpassword = "7.4.0"
bstr = { version = "1.12.0", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", features = ["flate2"] }
sys-mount = { version = "3.0.1", default-features = false }
vsock = "0.5.1"

[features]
default = ["freebsd"]
freebsd = []
