[package]
name = "vmrunner-sys"
version = "0.17.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
libkrun = { git = "https://github.com/containers/libkrun", rev = "4380b32b57001bda78f51ccbf1f81fc4e27eed48" }
libc = "0.2"

[features]
default = ["freebsd"]
freebsd = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
