[package]
name = "vmrunner-sys"
version = "0.17.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
libkrun = { git = "https://github.com/containers/libkrun", branch = "stable-1.19.x" }
libc = "0.2"

[features]
default = ["freebsd"]
freebsd = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
